# advent-of-code-2024

./: Cargo.toml  test.sh
.github/workflows/: rust.yml
benches/: aoc2024_bench.rs  aoc2024bench.rs
src/: cli.rs  lib.rs  main.rs
src/days/: aoc01.rs  aoc01_a.rs  aoc01_b.rs  aoc02.rs  aoc03.rs  aoc04.rs  aoc05.rs  aoc06.rs  aoc07.rs  aoc11.rs  aoc12.rs  mod.rs
src/helper/: input_parser.rs
src/lib/: input_parser.rs
