[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "aoc2024_bench"
harness = false

[profile.release]
opt-level = 3      # Maximize size optimization (alternative: "3" for performance)
lto = true           # Link Time Optimization
strip = true
